force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__activeModeling__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__activeModeling__c</fullName>
    <defaultValue>true</defaultValue>
    <description>determines if payment rule included in modeling</description>
    <label>activeModeling</label>
    <type>Checkbox</type>
</CustomField>