force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__AmountPerDeal__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AmountPerDeal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AmountPerDeal</label>
    <type>Checkbox</type>
</CustomField>