force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__Description__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Description__c</fullName>
    <label>Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>