force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__isDisplayed__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__isDisplayed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to show/hide Payments in Plan Documents and My Plans</description>
    <label>isDisplayed</label>
    <type>Checkbox</type>
</CustomField>