force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__IsTrueUp__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__IsTrueUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTrueUp</label>
    <type>Checkbox</type>
</CustomField>