force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__PaymentAmountType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PaymentAmountType__c</fullName>
    <label>PaymentAmountType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pay a rate based on each deal</fullName>
                <default>true</default>
                <label>Pay a rate based on each deal</label>
            </value>
            <value>
                <fullName>Pay amounts at specific points</fullName>
            </value>
            <value>
                <fullName>Pay an amount per sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>