force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__PaymentRampType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PaymentRampType__c</fullName>
    <label>PaymentRampType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent attainment of quota</fullName>
                <default>true</default>
                <label>Percent attainment of quota</label>
            </value>
            <value>
                <fullName>Explicit threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>