force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__PayrollCategory__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PayrollCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PayrollCategory</label>
    <referenceTo>XactlyExpress__XCPayrollCategory__c</referenceTo>
    <relationshipLabel>XCMeasure</relationshipLabel>
    <relationshipName>XCMeasure</relationshipName>
    <type>Lookup</type>
</CustomField>