force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__ProcessFrequency__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProcessFrequency__c</fullName>
    <label>ProcessFrequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Semi Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>