force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__QuotaFrequency__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__QuotaFrequency__c</fullName>
    <label>QuotaFrequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Semi Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>