force-app/main/default/objects/XactlyExpress__XCMeasure__c/fields/XactlyExpress__TierRoundOption__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__TierRoundOption__c</fullName>
    <label>TierRoundOption</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>HALF_UP</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>DOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>